# master-thesis

./: .gitignore  LOG.md  README.md  TODO.md  motor_controller.md  thoughts.md
PDI/: .gitignore  chapter2.tex  disc_demonstrator.blend  mymacros.tex  pdi.tex  quote.tex
data/: EtherCAT_Local_Control.xlsx  analise_data.m  local-10ms-tuning.csv  local-10ms.csv  local-10ms.fig  local-20ms-tuning.csv  local-20ms.csv  local-20ms.fig  local-5ms-tuning.csv  local-5ms.csv  local-5ms.fig  position_1.ods  remote-10ms-tuning.csv  remote-10ms.csv  remote-10ms.fig  remote-20ms-tuning.csv  remote-20ms.csv  remote-20ms.fig  remote-5ms-tuning.csv  remote-5ms.csv  remote-5ms.fig  tuning_analisis.m
doc/: network_diagram.drawio  supplies.md  thoughts.md  useful_links.md
docs/: SW_arch.drawio  comm_module_steps.drawio  connection_diagram.drawio  control-module-steps.drawio  document_structure.txt  local-control.drawio  log.txt  pv_module_steps.drawio  remote-control.drawio  slave_architecture.drawio  slave_architecture.xoj  supplies.md  useful_links.md
document/: .gitignore  Makefile  README.txt  bibliography.bib  macros.tex  root.tex  test_chapter.tex
final-report/: abstract.tex  chapter1.tex  chapter2.tex  pdi-en.tex  pdi.tex
presentation/: .gitignore  README.md  notes.txt  presentation.fdb_latexmk  presentation.tex
progress-report/: .gitignore  Makefile  acknows.tex  chapter1.tex  pdi.tex  report.tex  section1.tex  section2.tex
src/: README.md  (+1 more)
src/tests/DFR0592/: Makefile  dfr0592.c  dfr0592.h  dfr0592_addrs.h  dfr0592_old_test.c  dfr0592_test.c  meson.build
(+249 files in other folders)
